Spacing fix

--- a/styles/components/Skills.module.scss
+++ b/styles/components/Skills.module.scss
@@ -131,7 +131,7 @@
         @include respond(tab-port) {
           margin-left: 0;
           margin-top: 5rem;
-          margin-bottom: 10rem;
+          margin-bottom: 7rem;
         }
       }
     }
